@@ -47,7 +47,8 @@ bool CNSFFileDirectory::GetDirectory(const CStdString& strPath1, CFileItemList &
     vecCacheItems.Add(new CFileItem(*pItem));
   }
 
-  g_directoryCache.SetDirectory(strPath, vecCacheItems);
+  if (m_cacheDirectory)
+    g_directoryCache.SetDirectory(strPath, vecCacheItems);
 
   return true;
 }
