@@ -40,7 +40,8 @@ bool CSIDFileDirectory::GetDirectory(const CStdString& strPath1, CFileItemList &
     vecCacheItems.Add(new CFileItem(*pItem));
   }
 
-  g_directoryCache.SetDirectory(strPath, vecCacheItems);
+  if (m_cacheDirectory)
+    g_directoryCache.SetDirectory(strPath, vecCacheItems);
 
   return true;
 }
